# query_exec

./: .bench.sh.swn  .bench.sh.swo  .bench.sh.swp  .gitignore  Cargo.toml  README.md  automate_benchmark.py  bench.sh  benchmark_analyzer.py  benchmark_logs.csv  benchmark_results.txt  convert_parquet_to_csv.py  merge.sh  rsync_with.sh  run_benchmark.sh  run_gensort.sh  run_tpch.sh  temp.sh
benches/: benchmark_logs.csv  duckdb_benchmark.py  sort_bench.rs
benchmark_results/: bp_10000-qid_100.txt  bp_10000-qid_101.txt
bp_contention_results/: 16threads.txt  1thread.txt  2thread.txt  4threads.txt  8threads.txt
docs/: tpch.md
gensort/: convert_to_csv.py  generate_data.sh  sort-benchmark.sh
gensort/queries/: q1.sql  q2.sql  q3.sql  q4.sql
gensort/tables/: gensort_data.sql
src/: col_id_generator.rs  conductor.rs  csv_loader.rs  database_engine.rs  error.rs  lib.rs  logger.rs  quantile_lib.rs  query_executor.rs  schema.rs  tuple.rs
src/catalog/: col_id_gen.rs  mod.rs  schema.rs
src/executor/: bytecode_expr.rs  mod.rs
src/executor/bp_based/: .mod_temp  .mod_temp2  .mod_temp3  mod.rs
src/executor/inmem_pipeline/: inmem_buffer.rs  mod.rs
src/executor/ondisk_pipeline/: .sort.rs.swp  disk_buffer.rs  hash_table.rs  hash_table_2.rs  mod.rs  sort.rs
src/executor/pipeline/: mod.rs
src/executor/pipeline_in_mem/: mem_buffer.rs  mod.rs
src/executor/volcano/: mod.rs  result_buffer.rs
src/expression/: mod.rs
src/expression/logical/: aggregate.rs  flatmap.rs  hoist.rs  join.rs  map.rs  mod.rs  orderby.rs  project.rs  rename.rs  rules.rs  scan.rs  select.rs
src/expression/physical/: mod.rs
src/loader/: mod.rs  simple_csv_loader.rs
src/optimizer/: mod.rs
src/parser/: mod.rs  translator.rs
tpch/data/: duckdb_tpch.py  gen_tpch.py
tpch/queries/: q1.sql  q10.sql  q100.sql  q101.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
tpch/tables/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
util/: measurement.py
