[package]
name = "query_exec"
version = "0.1.0"
edition = "2021"

[features]
default = []
log_trace = []
log_debug = []
log_info = []
log_warn = []
log_error = []
datafusion_bench = ["datafusion", "tokio"]

[dependencies]
# fbtree = { git = "https://github.com/rotaki/FosterBtree.git", branch = "master"}
#fbtree = { git = "https://github.com/rotaki/FosterBtree.git", branch = "master"}
fbtree = { path = "../FosterBtree/" } 
csv = "1.3"
tempfile = "3.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.47"
clap = "4.5"
regex = "1.5"
rstest = "0.21"
datafusion = { version = "39.0", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }
rayon = "1.5.1" 
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sort_bench"
harness = false

# [patch."https://github.com/rotaki/FosterBtree.git"]
fbtree = { path = "../FosterBtree/" } 
