[package]
name = "query_exec"
version = "0.1.0"
edition = "2021"

[features]
default = []
log_trace = []
log_debug = []
log_info = []
log_warn = []
log_error = []
datafusion_bench = ["datafusion", "tokio"]

[dependencies]
# fbtree = { git = "https://github.com/rotaki/FosterBtree.git", branch = "master", features = ["async_write"] }
fbtree = { git = "https://github.com/rotaki/FosterBtree.git", branch = "master"}
csv = "1.3.1"
tempfile = "3.17.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.54.0"
clap = "4.5"
regex = "1.11.1"
rstest = "0.24.0"
datafusion = { version = "45.0.0", optional = true }
tokio = { version = "1.43.0", features = ["rt-multi-thread"], optional = true }

# [patch."https://github.com/rotaki/FosterBtree.git"]
# fbtree = { path = "../FosterBtree/" }